test-data/external-dns-values.yaml
policy: sync
env:
 - name: ETCD_URLS
   value: http://etcd-test-only-headless:2379
provider: coredns
rbac:
  additionalPermissions:
  - apiGroups: [""]
    resources: ["namespaces"]
    verbs: ["get","watch","list"]
sources:
 - gateway-httproute
logLevel: debug
extraArgs:
- --gateway-label-filter=external-dns/export==true
