test-data/gateway-class.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: GatewayClass
metadata:
  name: default
spec:
  controllerName: "github.com/tv2/cloud-gateway-controller"
  parametersRef:
    group: v1
    kind: ConfigMap
    name: default-gateway-class
    namespace: default
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: default-gateway-class
  namespace: default
data:
  ##gatewayTemplate: |
    istio: |
      apiVersion: gateway.networking.k8s.io/v1beta1
      kind: Gateway
      metadata:
        name: foo-gateway-istio
        namespace: default
        annotations:
          networking.istio.io/service-type: ClusterIP
      spec:
        gatewayClassName: istio
        listeners:
        - name: web
          port: 80
          protocol: HTTP
          hostname: "foo.example.com"
          allowedRoutes:
            namespaces:
              from: Selector
              selector:
                matchLabels:
                  allowGateway: foo
    alb: |
      apiVersion: networking.k8s.io/v1
      kind: Ingress
      metadata:
        name: foo-gateway
        namespace: default
      spec:
        ingressClassName: contour
        tls:
        - hosts:
          - foo.example.com
          secretName: foo-gateway-tls
        rules:
        - host: foo.example.com
          http:
            paths:
            - path: /
              pathType: Prefix
              backend:
                service:
                  name: foo-gateway-istio
                  port:
                    number: 80
