test-data/gatewayclass-aws-alb-crossplane.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: GatewayClass
metadata:
  name: aws-alb-crossplane
spec:
  controllerName: "github.com/tv2-oss/gateway-controller"
  parametersRef:
    group: gateway.tv2.dk
    kind: GatewayClassBlueprint
    name: aws-alb-crossplane
---
apiVersion: gateway.tv2.dk/v1alpha1
kind: GatewayClassBlueprint
metadata:
  name: aws-alb-crossplane
spec:
  # Global values used in the GatewayClassBlueprint
  values:
    vpcId: vpc-0e4501e0fbc404284
    subnets:
      subnetId1: subnet-045141a3fdf9d7bb9
      subnetId2: subnet-094508a77cf895ec9
      subnetId3: subnet-099f1b955e66e1a4a

  # The following are templates used to 'implement' a 'parent' Gateway
  gatewayTemplate:
    resourceTemplates:
      childGateway: |
        apiVersion: gateway.networking.k8s.io/v1beta1
        kind: Gateway
        metadata:
          name: {{ .Gateway.metadata.name }}-child
          namespace: {{ .Gateway.metadata.namespace }}
          annotations:
            networking.istio.io/service-type: ClusterIP
        spec:
          gatewayClassName: istio
          listeners:
            {{- toYaml .Gateway.spec.listeners | nindent 6 }}
      LB: |
        apiVersion: elbv2.aws.upbound.io/v1beta1
        kind: LB
        metadata:
          labels:
            tv2.dk/gw: {{ .Gateway.metadata.namespace }}-{{ .Gateway.metadata.name }}
          name: gw-{{ .Gateway.metadata.namespace }}-{{ .Gateway.metadata.name }}
        spec:
          providerConfigRef:
            name: admin
          forProvider:
            name: aws-alb-crossplane
            region: eu-central-1
            securityGroupSelector:
              matchLabels:
                tv2.dk/aws-alb: crossplane
            subnetMapping:
              - subnetId: {{ .Values.subnets.subnetId1 }}
              - subnetId: {{ .Values.subnets.subnetId2 }}
              - subnetId: {{ .Values.subnets.subnetId3 }}
      LBTargetGroup: |
        apiVersion: elbv2.aws.upbound.io/v1beta1
        kind: LBTargetGroup
        metadata:
          labels:
            tv2.dk/gw: {{ .Gateway.metadata.namespace }}-{{ .Gateway.metadata.name }}
          name: gw-{{ .Gateway.metadata.namespace }}-{{ .Gateway.metadata.name }}
        spec:
          providerConfigRef:
            name: admin
          forProvider:
            name: aws-alb-test
            region: eu-central-1
            vpcId: {{ .Values.vpcId }}
            port: "8080"
            protocol: HTTP
            targetType: ip
      LBListener: |
        apiVersion: elbv2.aws.upbound.io/v1beta1
        kind: LBListener
        metadata:
          labels:
            tv2.dk/gw: {{ .Gateway.metadata.namespace }}-{{ .Gateway.metadata.name }}
          name: gw-{{ .Gateway.metadata.namespace }}-{{ .Gateway.metadata.name }}
        spec:
          providerConfigRef:
            name: admin
          forProvider:
            region: eu-central-1
            port: "8080"
            protocol: HTTP
            defaultAction:
            - targetGroupArnSelector:
                matchLabels:
                  tv2.dk/gw: {{ .Gateway.metadata.namespace }}-{{ .Gateway.metadata.name }}
              type: forward
            loadBalancerArnSelector:
              matchLabels:
                tv2.dk/gw: {{ .Gateway.metadata.namespace }}-{{ .Gateway.metadata.name }}

  # The following are templates used to 'implement' a 'parent' HTTPRoute
  httpRouteTemplate:
    resourceTemplates:
      childHttproute: |
        apiVersion: gateway.networking.k8s.io/v1beta1
        kind: HTTPRoute
        metadata:
          name: {{ .HTTPRoute.metadata.name }}-child
          namespace: {{ .HTTPRoute.metadata.namespace }}
        spec:
          parentRefs:
          {{ range .HTTPRoute.spec.parentRefs }}
          - kind: {{ .kind }}
            name: {{ .name }}-child
            {{ if .namespace }}
            namespace: {{ .namespace }}
            {{ end }}
          {{ end }}
          rules:
          {{ toYaml .HTTPRoute.spec.rules | nindent 4 }}
