test-data/gatewayclass-aws-alb.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: GatewayClass
metadata:
  name: aws-alb
spec:
  controllerName: "github.com/tv2/cloud-gateway-controller"
  parametersRef:
    group: v1alpha1
    kind: GatewayClassParameters
    name: aws-alb
---
apiVersion: cgc.tv2.dk/v1alpha1
kind: GatewayClassParameters
metadata:
  name: aws-alb
spec:
  # Global values used in the GatewayClassParameters
  values:
    vpcId: vpc-0e4501e0fbc404284
    subnets:
      subnetId1: subnet-045141a3fdf9d7bb9
      subnetId2: subnet-094508a77cf895ec9
      subnetId3: subnet-099f1b955e66e1a4a

  # The following are templates used to 'implement' a 'parent' Gateway
  gatewayTemplate:
    resourceTemplates:
      childGateway: |
        apiVersion: gateway.networking.k8s.io/v1beta1
        kind: Gateway
        metadata:
          name: {{ .Gateway.metadata.name }}-child
          namespace: {{ .Gateway.metadata.namespace }}
          annotations:
            networking.istio.io/service-type: ClusterIP
        spec:
          gatewayClassName: istio
          listeners:
            {{- toYaml .Gateway.spec.listeners | nindent 6 }}
      awsAlb: |
        apiVersion: elbv2.aws.upbound.io/v1beta1
        kind: LB
        metadata:
          labels:
            tv2.dk/aws-alb: test
          name: {{ .Gateway.metadata.name }}-aws-alb
        spec:
          providerConfigRef:
            name: admin
          forProvider:
            name: aws-alb-test
            region: eu-central-1
            securityGroupSelector:
              matchLabels:
                tv2.dk/aws-alb: test
            subnetMapping:
              - subnetId: {{ .Values.subnets.subnetId1 }}
              - subnetId: {{ .Values.subnets.subnetId2 }}
              - subnetId: {{ .Values.subnets.subnetId3 }}

  # The following are templates used to 'implement' a 'parent' HTTPRoute
  httpRouteTemplate:
    resourceTemplates:
      shadowHttproute: |
        apiVersion: gateway.networking.k8s.io/v1beta1
        kind: HTTPRoute
        metadata:
          name: {{ .HTTPRoute.metadata.name }}-child
          namespace: {{ .HTTPRoute.metadata.namespace }}
        spec:
          parentRefs:
          {{ range .HTTPRoute.spec.parentRefs }}
          - kind: {{ .kind }}
            name: {{ .name }}-child
            {{ if .namespace }}
            namespace: {{ .namespace }}
            {{ end }}
          {{ end }}
          rules:
          {{ toYaml .HTTPRoute.spec.rules | nindent 4 }}
