test-data/gatewayclass-contour-istio.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: GatewayClass
metadata:
  name: contour-istio
spec:
  controllerName: "github.com/tv2-oss/gateway-controller"
  description: "Contour-based load balancer and Istio ingress gateway"
  parametersRef:
    group: gateway.tv2.dk
    kind: GatewayClassBlueprint
    name: contour-istio
---
apiVersion: gateway.tv2.dk/v1alpha1
kind: GatewayClassBlueprint
metadata:
  name: contour-istio
spec:

  # The following are templates used to 'implement' a 'parent' Gateway
  gatewayTemplate:
    resourceTemplates:
      childGateway: |
        apiVersion: gateway.networking.k8s.io/v1beta1
        kind: Gateway
        metadata:
          name: {{ .Gateway.metadata.name }}-child
          namespace: {{ .Gateway.metadata.namespace }}
          annotations:
            networking.istio.io/service-type: ClusterIP
        spec:
          gatewayClassName: istio
          listeners:
            {{- toYaml .Gateway.spec.listeners | nindent 6 }}
      loadBalancer: |
        apiVersion: networking.k8s.io/v1
        kind: Ingress
        metadata:
          name: {{ .Gateway.metadata.name }}
          namespace: {{ .Gateway.metadata.namespace }}
        spec:
          ingressClassName: contour
          tls:
          - hosts:
            {{- range .Gateway.spec.listeners }}
            - {{ .hostname | quote }}
            {{- end }}
            secretName: {{ .Gateway.metadata.name }}-tls
          rules:
          {{- range .Gateway.spec.listeners }}
          - host: {{ .hostname | quote }}
            http:
              paths:
              - path: /
                pathType: Prefix
                backend:
                  service:
                    name: {{ $.Gateway.metadata.name }}-child
                    port:
                      number: 80
          {{- end }}
      tlsCertificate: |
        apiVersion: cert-manager.io/v1
        kind: Certificate
        metadata:
          name: {{ .Gateway.metadata.name }}-cert
          namespace: {{ .Gateway.metadata.namespace }}
        spec:
          secretName: {{ .Gateway.metadata.name }}-tls
          duration: 2160h # 90d
          renewBefore: 360h # 15d
          subject:
            organizations:
              - acme-example-corp
          isCA: false
          privateKey:
            algorithm: RSA
            encoding: PKCS1
            size: 2048
          usages:
            - server auth
            - client auth
          dnsNames:
            {{- range .Hostnames.Intersection }}
            - {{ . | quote }}
            {{- end }}
          issuerRef:
            name: ca-issuer
            kind: ClusterIssuer
            group: cert-manager.io

  # The following are templates used to 'implement' a 'parent' HTTPRoute
  httpRouteTemplate:
    resourceTemplates:
      shadowHttproute: |
        apiVersion: gateway.networking.k8s.io/v1beta1
        kind: HTTPRoute
        metadata:
          name: {{ .HTTPRoute.metadata.name }}-child
          namespace: {{ .HTTPRoute.metadata.namespace }}
        spec:
          parentRefs:
          {{ range .HTTPRoute.spec.parentRefs }}
          - kind: {{ .kind }}
            name: {{ .name }}-child
            {{ if .namespace }}
            namespace: {{ .namespace }}
            {{ end }}
          {{ end }}
          rules:
          {{ toYaml .HTTPRoute.spec.rules | nindent 4 }}
